finished up to Styling Lists, only 5 lessons to go

--- a/index.html
+++ b/index.html
@@ -219,6 +219,82 @@
     </div>
 
 
+    <!-- STYLING TEXT -->
+
+    <!-- SPACING -->
+    <!-- We dont like the space between h1 and h2, its too much -->
+    <!-- We will fix it in the CSS file -->
+
+
+    <div>
+        <h1 class="titlestyle">STYLING TEXT</h1>
+    </div>
+
+    <div>
+        <h2 class="subtitle">We will be trying different Stylings</h2>
+    </div>
+
+    <p class="paragraphs">There's a shadow just behind me
+        Shrouding every step I take
+        Making every promise empty
+        <span class=bolder>Pointing every finger at me</span>
+        Waiting like a stalking butler
+        Who upon the finger rests
+        <span class=bold>Murder now the path of must we</span>
+        Just because the son has come
+        <a href="https://www.formula1.com/en/drivers/hall-of-fame/Juan_Manuel_Fangio.html" class="important-link">Juan
+            Manuel Fangio
+            Déramo</a>
+    </p>
+
+    <div class="body-text">
+        <p class="paragraphs">Why can't we not be sober?
+            Just want to start this over
+            And why can't we drink forever?
+            I just want to start this over<a
+                href="https://www.formula1.com/en/drivers/hall-of-fame/Juan_Manuel_Fangio.html"
+                class="important-link">Juan Manuel Fangio
+                Déramo</a></p>
+
+        <p class="paragraphs">Why can't we not be sober?
+            Just want to start this over
+            And why can't we drink forever?
+            I just want to start this over</p>
+
+        <p class="paragraphs">I am just a worthless liar
+            I am just an imbecile
+            I will only complicate you
+            Trust in me and fall as well
+            I will find a center in you
+            I will chew it up and leave
+            I will work to elevate you
+            Just enough to bring you down
+        </p>
+
+        <p class="paragraphs">I am just a worthless liar
+            I am just an imbecile
+            I will only complicate you
+            Trust in me and fall as well
+            I will find a center in you
+            I will chew it up and leave</p>
+    </div>
+
+    <!-- STYLING LISTS -->
+
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+    </ol>
+
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+    </ul>
+
 </body>
 
 </html>
